services/pihole/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    name: pihole
  name: pihole
