services/pihole/pihole-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: pihole.local.mickwheelz.net
    http:
      paths:
      - backend:
          service:
            name: pihole
            port:
              number: 8000
        path: /
        pathType: Prefix
